# servant-experiment-2

./: README.md  locutions-hs.cabal
src/: Lib.hs
src/Schema/: Ethica.hs
