name:                locutions-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/locutions-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Schema.Ethica
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lucid
                     , servant-lucid
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable locutions-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , locutions-hs
  default-language:    Haskell2010

test-suite locutions-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , locutions-hs
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/locutions-hs
